[gd_scene load_steps=20 format=2]

[ext_resource path="res://Collisions/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/PlayerStats.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/player1_idle1.png" type="Texture" id=3]
[ext_resource path="res://Player/player1_run1.png" type="Texture" id=4]
[ext_resource path="res://Player/player1_run2.png" type="Texture" id=5]
[ext_resource path="res://Player/player1_run3.png" type="Texture" id=6]
[ext_resource path="res://Player/player1_run4.png" type="Texture" id=7]
[ext_resource path="res://MiniGames/DrivingRangeMiniGameCode/Hider/Hider.gd" type="Script" id=8]
[ext_resource path="res://Enemies+Allies/Animations/Hit.tres" type="Animation" id=9]
[ext_resource path="res://Music/SoundAffects/GotHitSound.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/explosion/explosion2.png" type="Texture" id=11]
[ext_resource path="res://Assets/explosion/explosion1.png" type="Texture" id=12]
[ext_resource path="res://Assets/explosion/explosion4.png" type="Texture" id=13]
[ext_resource path="res://Assets/explosion/explosion5.png" type="Texture" id=14]
[ext_resource path="res://Assets/explosion/explosion3.png" type="Texture" id=15]
[ext_resource path="res://Assets/explosion/explosion6.png" type="Texture" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 16 ) ],
"loop": true,
"name": "boom",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.10426, 8.21706 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.37697, 9.79048 )

[node name="Hider" type="KinematicBody2D"]
script = ExtResource( 8 )
id = 2

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.34964, 7.69226 )
shape = SubResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 1 )]
collision_layer = 128

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0.174828, 6.46849 )
shape = SubResource( 3 )

[node name="PlayerStats" parent="." instance=ExtResource( 2 )]
max_health = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = ExtResource( 9 )

[node name="GotHitSound" parent="." instance=ExtResource( 10 )]

[node name="Timer" type="Timer" parent="."]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Hurtbox"]
